--- a/GendocsForms/Forms/FrmCalendario.resx
+++ b/GendocsForms/Forms/FrmCalendario.resx
@@ -118,51 +118,37 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pbCerrarFormulario.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnAceptar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAESSURBVFhH7ZdLCsIwFEU7dxnqwvyhog4cuVNnggM/e1AE72kVqiZpTBoU7YGLiTzeva2mTbIG
-        A11pIK1qFj07kpOFdJYO0qZm0fMkzSQjXDnmw3yWhpFEiHY+e6Iv7YphUvZSrxg+spTWxTApeOD1QhOg
-        KkDr9umDqzYoAA230iSfuaGGWluI4DvA8rxI1nUsfGqCA8DdYJ7PHmGNV5lDVAAwhfA1h+gAUA7xjjnU
-        EgCmEsaIsS+/EaB8211/TBPRAUxLzfSdjagALiPfEMEBfAx8aoICfMWj2PWCecZVGxygLpoA1gAf35Ry
-        aGDLzFMuFWPJui0H1i8FR8l0uIgRPeld+d4gXYqjGT+x9cr/lSy7AusSpn+cnpfOAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAHcSURBVEhLrZU9TxRBGIBX0ISIEiMKaKNIQWMMVBaGigA2+geMWvsRE6xogZBoa/j+A9RWKPwA
+        EqyExM4Qwc9W/4DPM3N33MHu3t7CkzzJvHN7szPvvDObtMiZiqdGH77ADfyO/yr+wA/4CnuwZS7iHP7E
+        eRzDbqxyCcfR337jWzyPhbiFu7iAV+xowlVcRf9zA51IZhod/AAfhag1HuJ1/IIjdhzFtDiLMoPLOdzE
+        6RClYM5NS1lWcA0HcMqOeqwWN7RIztN4jVvYge7BH2yorpdoRZThAX7F3hBFHGsyNiPWuaXYKkPombgd
+        okNG0XNSw8q5HJuFuYZ7eD9EjXShaQq0oafzaO3a/x7vhKgRD9Un9JRn8RfbbWS9QFyqq7sXoojPWS3v
+        QpSOzzimYwfyUnQX93EiREnyBtfxbIjS8XR/i83IR/RuyWIYnYS1voPmOA/3xUnUMJfNDtkgbqP3TTOW
+        8FlsRqxhD5pLyyPzEqvDsX7hsWt8Fn3zSfFmTb2PLqD5fRyicjzFz9gZohT60Yop85In6H9vhigHX+JK
+        lrHI59CcmxZn3nTwKi5xBt2sRbSE6wvAtufCPfMZc56Zljyc3XO0pj0H1Y++bfssxVIf/Sws0yKlWiFJ
+        /gMY7VAdnz3mkAAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="BtnLimpiarFiltros.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnCancelar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAMiSURBVFhH1ZfLi41hHMfPmCmTYUhm2CAbM5MSFlOkhllIIVE2Vpgo+Q9mIrFQLoXFkGHGpSzc
-        GplRLGwGZTcoYeGShXsuuZRLx+f7+jrHOe8773nPZcG3PnWe7/N7fu/leZ7f857Uf6V0Ol0D7bAVTsFF
-        OAcHoRPaoMbhlRNJm6EP3sIPGIYBOAo9cAluw094D8ehycNLF0ka4Qh8hyHogAZ3h0Sf4tfBLdCN6kYm
-        urs4MXAePIN7sMJ2YjFmOTyEJ9BqO5l0QfgMZ2CM7aLF2Ho4C7tgNFyBZe6OFgF6cl18N1TZLkvkGQUn
-        4BXMsB0WnZpDvXY9eUUuLpFLO+QrLLAVLQK04DTnJb/2fJFrDWh3rIUpsMNduaJDW02rvegFN5LI1Qpf
-        YLvbS0A3MzsI+FuY2udDbpYtck2D53AaMtPJ7xtwzM3fwlCFU5HZYKsskWccqDDdhFrbgWivh4+QnWYa
-        i0GFo9FWySJHNahKPo7KhzcedK12W4G5DYbdLEvk2Q8fYJatkOi7C51uBob26ICbIdGnKSpYUonZDFrI
-        S21Fin5t8x43A0OnWtbIE3074T5MtRUSfVrhuvgWWyOKmMNwwc1ENzABtHqfQuiUw2uBd3DAVqyI0yna
-        72ZgaAoG3YwU/XVwFV7CHNvyG+ARDEK17VgRdxn63AwMfWAUXITE6EA5DzrzF0It6M3cgXqHFZTju9wM
-        DG1DVaiC25AYbbNe0IF1DV7AdHcXFLEqx7pWm61M0tfQYStWxFXBHtABM992IhG/Cd5A7qcbhkrxdTcT
-        ifhm/0wsxqg69rqZFeZM+AYrbVVc5F4N2qottnJFh/an9nudrYqJnGPhAXTbCotOfZBor+tTu5IfJFoz
-        2j36PpxkO1oEzIVPsBfKvgnlgH3OmakfsSJQX7QaoA/KkqeDsXrtenLliv8YzRcD9CY0HVoTRS9MxqwC
-        zblee7InzxcDVWYPgVauKt5GmOzukOhTkVGMtpp2VDfEz3kSkaQJVP1UQFTFVEr//DUTOgd0xqtPMYot
-        /69ZvkiqirkIuuAk9BsdZvL05zTRgfSPKJX6BelC2c0ypQ/XAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAJdSURBVEhLtZVbbtNAFIYNj9wk7jxyE10AElUz45IHSJV6bNEHJMRlAbQsAgRiAaVE7KQtu4Cy
+        gTSJxw7iqQso/z85dmxsN00rPmmU+c+Mz5k5Pj7x5uHQ885wiDw949X2LWvUuzjQ3xOjh9boAw7OE+Pv
+        Yr7BPbL9+PyO1MXY+J9tqGNr/C9poJ8M1x5dlWWP8zRSTxFgi3uSQH8aP29fkOWjSbute3jwlw3VZtFp
+        E3HYvuYCGb2Hg9wVcz3ifD8J/BdiOjZJqF+6Z8PlO2Iqw7Tw5CdxnhEb9Qop+1mbrknO1abIE4MAPRTB
+        R5ETXLXgZf2b8z/dxUvDVf1AZIVRpBa4R6TDdv3r9JVGizfFBCNKkdUiMocOkLbRKPKVmHJom6ypBTHl
+        2EB/RZB1kUgP6pylKLLE1NE0SJ2tSBy2OljfEckb6FE/0JdFVkiD5RavjX1tNzfa2tB/LMsVmGrs2Xfi
+        8L13FuJgVgvITs3RdPIM+nI+4fv/ByAQg8HK0hUnaiimpZguWa7gKsnovkh8hWhc7C0iS2QnL566zlYk
+        DvwVHGJbpLvBBsaWyJxxtHS/yVEWhHvElAPnPRv4b0UiBfgoeG02LjE54vDhuToHGVzjHpGOZK11g774
+        K6YJbLl1t5gX+PlmA/VB5BQ2KATYY1cU09zEoX4DHz+STue8mMqwn2MDWu78QfBiX+PZvn3Wvi2melwQ
+        tFz3olBuYm6EuXZpwclnOs9guthy8RBqX/fYW4oFwMBSij2+UOa8MS1HIdW1jrGNYAMM96fv5rShFCvV
+        chrYAma1lDKe9xfmJWqFUbhMEgAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAK4SURBVFhH1ZfNThRBFIWHwAJwK/AGAq4YH0BRVwoEH0FAF0ZfgN+dMb4AEDWAGoJxhQm6B3kA
-        olG3gktxpxuFDN9pzjAz1HRPz9AQPMmXTJ17q6p/qqrv5P4rFQqFFrgB0/Aa3sGqf8u7Di1Oz04M2gtL
-        8Av2YAvW4IXRb3mK7cIi9Lh742KQTngG/2AdRqDD4UCKwShsgPrMQ6fD9YmOV+AHfIbbtlOLPgPwBXYg
-        bzud6DAEf2AZWm3XLfq2wQr8hkHbySJRd67JH0OT7YalMeAJ6CKSnwQJeud67LrzE09elMaCN7ANsWtI
-        iVpweudttjITY7bDV5izVSkC3aCVe8tW5mJsrS1t1cu2SsLUPl93MxCxcbjrZqzI0VYddzMQsY+w4Oah
-        MHTC6ZAZsRWI2BjswwNbgRRzzqitQMQ0jg6r0olJ4ybo0cQvEET8HmiCR7aOhHffsYe2qoq4Frrm6rcV
-        mTOw5WaiyCve5dGTqOYlibxPMOVmZLyENTdrShNBNGH5b4dritz3sORmZOir9tzNVNKEoInrmlwiXx+w
-        VTfPxwWc9Sv4AItuRoaKibNehJNuRoYqGQ3QZauqiMduNbzYLVou4tqGyrtqKzJ1EOlwqHWAJN6lYs4Z
-        sxWImC70JzTbOhSGyqgNNwMRm4DYCyyKHF3ohJuBiG1C5VEsYV6Cv5CucGhAjH0H9MHrtVUpAqrhVEad
-        xuf4AnyDWVuhCGqBqGhQGZV1QfIWvsNF29VFQh5UPqmMyqoke+ox+2wni8RBd1AZ1W67bqkv6M411oDt
-        dKKDnoReh8qoIdupRZ9h0DvXY09358dFR/3RmAOtXFUy2mKxfzSIdYH2ubaadtQsJL/zNGKQHtA5ocNK
-        B42O0vK/Zvq8ylNMOQvQ7e7ZiUGboR8m4RXoj6nQx0zeNag84c63crkD4EzbA3kNk6sAAAAASUVORK5C
-        YII=
-</value>
-  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
+  </metadata>
 </root>
