--- a/GendocsForms/Properties/Resources.resx
+++ b/GendocsForms/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="icons8_cancelar_32__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\icons8-cancelar-32 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icons8_cancelar_rojo_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-cancelar-rojo-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icons8_carpeta_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\icons8-carpeta-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -147,6 +150,9 @@
   </data>
   <data name="icons8_cerrar_ventana_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\icons8-cerrar-ventana-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8_comprobado_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-comprobado-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons8_comprobado_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\icons8-comprobado-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
