--- a/GendocsForms/Forms/frmMenu.resx
+++ b/GendocsForms/Forms/frmMenu.resx
@@ -364,4 +364,28 @@
         GxdDG6Hsx2WWG5A7bv9bNRq/AJ8OZ7f2WP+HAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAABFRJREFUWEfd
+        l3mI1VUUx0dNS0uwxLRyT3OURDEqS0TQzAxNUxPGJJE0MqHNCBWKgsCSQFTUxIwCsXLJDSlSIjcKQtOQ
+        iiBFIzXKzKVSK1+fz/Xc14zyZGSe/tEXPrx7z7m/u567vIr/hQqFwm3wMWyAaWG+fKLROfAdLIOj0Chc
+        l1Y01B02gnoOboQT8ANMgnpRtHyi0o7wG3wBf8By6BVu/dfBs3AcvgTLTg933UVlK2EHvApPhFn7DdAN
+        roj8rbAQ5sPv0CYVrKuoaB9shiaRbwofQNZ+6JsKI9KPJmuhMChMdRMV3XK2vsLAyM+DPdAbWsNi+Ama
+        hX8vvG66LKKyDqA6R/4gjE9ORLoROOUPRP4TmJGc5RCVtQVVGXkj/vHkRKSbwJ8wOPKb4JXkLIeorBeo
+        vASvgbMwDHrCKjBOrgm/S7DAdFlEZYfgI2gY+avgDTgNaif0SIUR6YeSNZbkosRHzcBjVnLUvwPfgsH2
+        IjQIe2O43rQi3Qfcsu+Bp2PRV2vx0fuQNTdsN8H38CEcAYNsENQPf3uYAafAu8Gyk/XVWnzQAEbAr/Ak
+        vAQ/wn1QPF5J29i74PRbpl2kv4JRUax24oPm8BTcA5+BW+kt8Gh11DZ0Erz1BsDTkANtJtjBLWCn02xc
+        lPjIxtw+yq3TMlxFYXOE2+EM2JmZYe8KS8HbcFLYjBPlUvTWVlIU6AT/wCPgaZYDayi8DW9C/7B50Hju
+        PwN2ooX26sI2BNRY2A0OrnG4z5dOcNQeKuku53cq/AVOvWf93zAhfC7Xz7AWjJdW4PlwM2wDB7MC6sF4
+        cFks75Z0OXtaTw1hvB8cUX3wgjGYxoZbv1esUa/f7anuABsxZrJ8H7SNz5LIe1ZMAwehHFi3cJ8Vhsdg
+        b6Q90VT1fe31qlpH3oeHO2U0WHE/GA75Ou4Lz8MYSNPP753gpbUV1morCsNgMGCc0qvBgExTrkhPB6fR
+        GbgW1O3grvG7l6OoZWeDo/RUdNa+gRQr/Hqo+UhZmAorMjb4OXho5CPWLenI1oFbz/TD4bMDB8LeEOaa
+        Dp8jt/F+kXe57Ei6D/g10A/Df1uVjM8sGxgHXSAHYn/wvndEaSvx621nsE0BZ8mANODSiPh12neaziLv
+        e3FXpO2g27jmrsDghZKDxNk47wmFzc65rZRl0zXL7wJYGWnX3GlPDxJFegmsj/SDcAxqPlgxOFUG4t3g
+        +e66ehe0AA+gNWCjq+EumAjORkuwU+uiHre0a+60O3Ib97v0TOO3Cqy79O2I0611L/wCngcetd7xxbde
+        FjaXwgbaQL6Q7LQzugvWQ248+72kdpi+oChk77NmhbmGsBuQdtQ/Jj7FizunurB7XH8NBrozMCZcpUUh
+        p9MAlZL/dvB5ZM+CF8DD7FMYGT7jZhF4bvhaMki9rsv/p0VRcSX4aDHSXQrfDV7PBt+lafRc0dCV4HVu
+        tBsfVeG6fKJRd4qXj8d1ieWrqPgX9E2C0VT0x+EAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
